# dmiget

./: .gitignore  CHANGELOG  Makefile.in  PKGBUILD  PKGBUILD.mingw  README.md  configure.ac  dmiget.cbp  dmiget.pc.in  dmiget.static.pc.in  dynamic.pc.in  libdmidecode.cbp  libdmiget.pc  meson.build  pyproject.toml  run.sh  setup.py
.github/workflows/: codeql.yml  msys2.yml  publish.yml  pycheck.yml  pypi.yml  python.yml  wincheck.yml  winpkg.yml
arch/: PKGBUILD
debian/: changelog  control  dmiget.dsc  rules  shlibs
po/: POTFILES.in
rpm/: _servicedata  dmiget.spec  mingw64-dmiget.spec  python-smbios.spec
sdk/: dynamic.pc.in  static.pc.in
src/: value.cc
src/dmiget/: dmiget.cc
src/include/: config.h.in
src/include/dmidecode/: value.h
src/include/private/: constants.h  data.h  decoders.h  oemstring.h  python.h  smbios.h
src/include/private/decoders/: baseboard.h  bios.h  chassis.h  memory.h  probe.h  processor.h  system.h  tools.h
src/include/smbios/: defs.h  memsize.h  node.h  object.h  value.h
src/libdmiget/: constants.cc  data.cc  factory.cc  file.cc  object.cc  string.cc  table.cc  value.cc
src/libdmiget/decoders/: abstract.cc  bios.cc  chassis.cc  decode.cc  firmwarerevision.cc  integer.cc  item.cc  probes.cc  processor.cc  smbios3.cc  string.cc  table.cc  tools.cc  value.cc
src/libdmiget/include/: config.h.in  internals.h  pydmiget.h
src/libdmiget/include/dmiget/: defs.h  table.h  value.h
src/libdmiget/node/: foreach.cc  iterator.cc  next.cc  node.cc
src/libdmiget/os/linux/: constants.cc  data.cc  file.cc  node.cc  private.h  reader.cc  table.cc  value.cc
src/libdmiget/os/windows/: data.cc  file.cc  fromfile.cc  resources.rc.in  table.cc
src/libdmiget/value/: abstract.cc  decoded.cc  iterator.cc  memsize.cc  oemstring.cc  url.cc  value.cc
src/os/linux/: node.cc  paths.cc  private.h  reader.cc  value.cc
src/python/: init.c  init.cc  moduleinfo.cc  node.cc  private.h  tools.cc  value.cc
src/python/node/: methods.cc  type.c
src/python/value/: methods.cc  type.c
src/testprogram/: testprogram.cc
win/: Makefile.msc  ci-build.sh  mingw64-dmiget.spec
win/x86_64/: mingw64-dmiget.spec
